--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>  <a href="https://www.zhihu.com/column/c_1282044751274045440" target="_blank">扫地僧Backtrader知乎专栏 </a></li>
-			  <li><i class="ri-check-double-line"></i> Backtrader QQ群：1125384417 ，交流答疑，下载bt资源，包括样书，中国期货模拟实盘交易代码等</li> 
+			  <li><i class="ri-check-double-line"></i> Backtrader QQ群：1125384417 ，交流答疑，下载bt资源，包括样书(含可用性源码)，中国期货模拟实盘交易代码等</li> 
               <li><i class="ri-check-double-line"></i> Backtrader微信公众号：optMaster ，发表高级专题内容</li>
 		      <li><i class="ri-check-double-line"></i> 扫地僧微信：qtbhappy</li>			  
               
