--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <li><i class="ri-check-double-line"></i>  <a href="https://shop596279012.taobao.com/?spm=2013.1.1000126.2.39823cc14pUatR" target="_blank">点此在淘宝购买</a></li>
 			  <li><i class="ri-check-double-line"></i> 《扫地僧Backtrader给力教程系列一：量化回测核心篇 增订版》</li>  
 		          <li><i class="ri-check-double-line"></i> 《扫地僧 Backtrader 给力教程系列二：量化回测与实盘交易高级篇》</li>   
-              <li><i class="ri-check-double-line"></i> <a href="https://www.zhihu.com/column/c_1282044751274045440" target="_blank">教程内容详细介绍</a></li>
+              <li><i class="ri-check-double-line"></i> <a href="https://zhuanlan.zhihu.com/p/560885290" target="_blank">教程内容详细介绍</a></li>
             </ul>
           </div>
 		  
