--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i>  
-	<a href="https://github.com/quantcn/quantcn.github.io/raw/master/%E6%A0%B7%E4%B9%A6%E5%92%8C%E6%BA%90%E7%A0%811.486.zip">《扫地僧Backtrader给力教程：股票量化回测核心篇》样书和源码下载 </a></li>
-			  <li><i class="ri-check-double-line"></i> 到QQ群 1125384417 现在两本教程的样书和案例代码</li>   
+
+			  <li><i class="ri-check-double-line"></i> 到QQ群 1125384417 下载两本教程的样书和案例代码</li>   
 		          <li><i class="ri-check-double-line"></i> 阅读样书，运行源码，并对照前面视频课程试看部分，即可快速入门Backtrader</li>   
 			  <li><i class="ri-check-double-line"></i> 样书目录反映了全书内容，请仔细阅读，绝非文档翻译</li>			  
               
