--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <big><b>Backtrader视频课程</b> </big>
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> <a href="https://ke.qq.com/course/list/%E6%89%AB%E5%9C%B0%E5%83%A7%E9%87%8F%E5%8C%96" target="_blank">点此在腾讯课堂购买</a></li>
+              <li><i class="ri-check-double-line"></i> <a href="https://ke.qq.com/course/list/%E6%89%AB%E5%9C%B0%E5%83%A7%E9%87%8F%E5%8C%96" target="_blank">点此在腾讯课堂购买。请用安卓或pc机购买，苹果手机无法购买</a></li>
 	      <li><i class="ri-check-double-line"></i> 扫地僧Backtrader给力教程系列一：量化回测核心篇 增订版。购买视频送纸版教程。</li>
 	      <li><i class="ri-check-double-line"></i> 扫地僧 Backtrader 给力教程系列二：量化回测与实盘交易高级篇。购买视频送纸版教程。</li>
               <li><i class="ri-check-double-line"></i> 免费试看部分即可入门，强烈建议试看该课程。体验backtrader功能。</li>              
