--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
               <big><b>Qlib视频课程</b> </big>
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> <a href="https://ke.qq.com/course/3139956?tuin=a980d4cc" target="_blank">点此在腾讯课堂购买</a></li>
-			  <li><i class="ri-check-double-line"></i> 面向人工智能的AI量化平台Qlib技术教程（含源码）</li>
-              <li><i class="ri-check-double-line"></i> 免费试看部分即可入门（可下载源码），强烈建议试看该课程。体验Qlib功能。</li>  
+              <li><i class="ri-check-double-line"></i> <a href="https://ke.qq.com/course/5838458#term_id=106051065" target="_blank">点此在腾讯课堂购买</a></li>
+			  <li><i class="ri-check-double-line"></i> 扫地僧AI量化平台Qlib给力教程系列一：核心篇（含源码）</li>
+              <li><i class="ri-check-double-line"></i> 免费试看部分即可入门，强烈建议试看该课程。体验Qlib功能。</li>  
 			  <li><i class="ri-check-double-line"></i> 可以将Qlib的机器学习和开源量化回测框架backtrader结合在一起使用。</li>
               
             </ul>
